# SunshineRecorder

./: .gitignore  CLAUDE.md  CMakeLists.txt  CODE_REVIEW.md  README.md  REFACTORING_SUMMARY.md  WORKLOG.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Grain.cpp  Grain.h  GrainEngine.cpp  GrainEngine.h  LFO.h  SampleBuffer.cpp  SampleBuffer.h  TapeDamageProcessor.cpp  TapeDamageProcessor.h  TapeDelay.cpp  TapeDelay.h  TapeDisintegrationEngine.cpp  TapeDisintegrationEngine.h  Voice.cpp  Voice.h
Source/Parameters/: Parameters.cpp  Parameters.h
Source/Parser/: README.md  component_mapping.json
Source/Tools/Parser/: SVG_AUTHORING_GUIDE.md  svg_to_juce.py
Source/UI/: GrainVisualizer.cpp  GrainVisualizer.h  LFOVisualizer.h  OccultKnob.cpp  OccultKnob.h  OccultLookAndFeel.cpp  OccultLookAndFeel.h  WaveformDisplay.cpp  WaveformDisplay.h
tasks/: changelog.md  lessons.md  session_summary.md  skills.md
